[package]
name = "tilda"
version = "0.3.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]

[dependencies]
clap = "~2.19.0"
libc = "0.2"
ndarray = { version = "0.7", features = ["serde"] }
rand = "0.3"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"

[profile.release]
debug = false
