[package]
name = "tilda"
version = "0.3.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]

[dependencies]
clap = "~2.29"
libc = "0.2"
ndarray = { version = "0.11", features = ["serde-1"] }
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
debug = false
